--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Explorer</string>
     <string name="action_settings">Settings</string>
     <string name="Carpetavacia">Carpeta Vacia</string>
+    <string name="app_names">Mi Aplicacion</string>
 </resources>
