--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="Carpetavacia">Carpeta Vacia</string>
     <string name="app_names">Mi Aplicacion</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
